<resources>
        <integer name="app_id">2386079</integer>
        <string name="app_sign">b2f34b82d905f322ccf6ea5e8c8e7efc7724de85bf4a9f7ac24cc903bdde063f</string>
        <string name="app_name">xdd</string>
        <string name="login_title">Inicio de sesión</string>
        <string name="hint_user">Usuario</string>
        <string name="hint_password">Contraseña</string>
        <string name="button_login">Iniciar Sesión</string>
        <string name="not_registered">¿Aún no estás registrado?</string>
        <string name="register_here">Regístrate aquí</string>
        <string name="button_register">Registrarme</string>
        <string name="button_logout">Cerrar Sesión</string>
        <string name="button_language">Cambiar Idioma</string>
        <string name="button_language_accept">Aceptar</string>
        <string name="register_title">Regístrate</string>
        <string name="hint_full_name">Nombre y Apellidos</string>
        <string name="hint_email">Correo Electrónico</string>
        <string name="hint_phone">Teléfono Móvil</string>
        <string name="hint_confirm_password">Confirmar Contraseña</string>
        <string name="already_registered">¿Ya estás registrado?</string>
        <string name="start_now">Iniciar Sesión</string>
        <string name="navigation_drawer_open">Abrir menú</string>
        <string name="navigation_drawer_close">Cerrar menú</string>
        <string name="chat_menu">Chats</string>
        <string name="llamada_menu">Llamadas</string>
        <string name="menu_menu">Menú</string>
        <string name="button_edit_profile">Editar Perfil</string>
        <string name="hint_name">Nombre</string>
        <string name="button_save_changes">Guardar Cambios</string>
        <string name="button_change_password">Cambiar Contraseña</string>
</resources>
