<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/black">

    <!-- Campo para el nombre -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo para el email -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo para el teléfono -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Botón para guardar cambios -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveChanges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save_changes"
        android:backgroundTint="@color/input_background"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"/>

    <!-- Botón para cambiar contraseña -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_change_password"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"/>

</LinearLayout>