<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="16dp"
    android:gravity="center">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEditProfile"
        android:layout_width="400px"
        android:layout_height="wrap_content"
        app:cornerRadius="10dp"
        android:text="@string/button_edit_profile"
        android:backgroundTint="@color/input_background"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"/>

    <!-- Botón para cambiar idioma -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_change_language"
        android:layout_width="400px"
        android:layout_height="wrap_content"
        app:cornerRadius="10dp"
        android:text="@string/button_language"
        android:backgroundTint="@color/input_background"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"/>

    <!-- Botón para cerrar sesión -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="400px"
        android:layout_height="wrap_content"
        app:cornerRadius="10dp"
        android:text="@string/button_logout"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"/>

</LinearLayout>